# hcg-dsa-app

./: .gitignore  cadido_database.db  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  styles.qss
src/domain/: entities.py  enums.py  schemas.py
src/infrastructure/: config.py  crypto_sealer.py  database.py  document_analyzer.py  network_storage.py  ocr_processor.py
src/presentation/: __init__.py  documento_viewmodel.py  styles.py  templates.py
